welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:17: error: value continu is not a member of Unit
possible cause: maybe a semicolon is missing before `value continu'?
		}continu();
                 ^